Added: Dynamo DB configuration
