# server/api/models/user.tenants.ts
@@ -1,0 +1,5 @@
+export interface UserTenant {
+  id: number;
+  userName: string;
+  tenantName: string;
+}
